# subtitre

./: .gitignore  client.py  example.py  rawsub.srt  richsub.srt  server.py  settings.example.yml  stack.yaml  subtitre.cabal  test.srt
app/: Main.hs
assets/: 500
eve/: rproxy.conf
hal/: Capfile  Gemfile
hal/app/assets/javascripts/: application.js
hal/app/assets/javascripts/application/: subtitre.js
hal/app/assets/stylesheets/: application.scss  bootstrap.css  creative.scss  subtitre.scss
hal/app/assets/stylesheets/application/: home.scss
hal/app/controllers/: application_controller.rb  home_controller.rb  subtitre_controller.rb
hal/app/models/: language.rb  subtitle.rb  subtitre.rb  wordreference.rb
hal/app/views/common/: _footer.html.erb  _google_analytics.html  _navigation.html.erb
hal/app/views/home/: _about.html.erb  _available_languages.html.erb  _landing_view.html.erb  _portfolio.html.erb  _what.html.erb  about.html.erb
hal/app/views/layouts/: _footer.html.erb  _header.html.erb  application.html.erb
hal/app/views/subtitre/: _form.html.erb  _modal.html.erb  _translate_btn.html.erb  create.html.erb  index.html.erb
hal/app/views/subtitre/form/: _create.html.erb
hal/config/: application.rb  cable.yml  database.yml  deploy.rb  routes.rb  secrets.yml
hal/config/deploy/: local.rb  production.rb  staging.rb
hal/config/deploy/templates/: puma.rb.erb
hal/config/environments/: production.rb
hal/config/locales/: en.yml  fr.yml
hal/config/puma/: production.rb
hal/db/: schema.rb  seeds.rb  wordreference.attack.json
hal/db/migrate/: 20170616150824_create_translations.rb  20170616150824_create_wordreferences.rb
hal/lib/capistrano/tasks/: walle.rake
hal/spec/controllers/: subtitre_controller_spec.rb
spacy/: client.py  server.py
src/: Composer.hs  Dico.hs  Foo.hs  LevelSet.hs  Lib.hs  Logger.hs  New.hs  Parser.hs  RawSubParser.hs  RichSubCtx.hs  SentenceStructParser.hs  Serializer.hs  Type.hs  scheme.hs
src/Composer/: RawSub.hs  RawSubCtx.hs  RichSubCtx.hs
src/Config/: App.hs  RuntimeConf.hs  StaticConf.hs
src/Deserializer/: WordReference.hs  Yandex.hs
src/Translator/: Local.hs  Offline.hs  Online.hs  Translate.hs  Word.hs
src/Translator/Strategy/: WordReference.hs  Yandex.hs
test/: RawSubParserSpec.hs  RichSubCtxSpec.hs  SentenceStructParserSpec.hs  TestUtil.hs
test/Composer/: .#RichSubCtxSpec.hs  RichSubCtxSpec.hs
test/Deserializer/: WordReferenceSpec.hs  YandexSpec.hs
test/Translator/: OnlineSpec.hs
test/Translator/Strategy/: YandexSpec.hs
test/assets/: game of thrones.srt  mr. robot.srt
wall-e/: settings.example.yml  struct.srt  subtitre.cabal
wall-e/app/: Main.hs
wall-e/assets/: 3000
wall-e/assets/donttranslate/: en  enfr
wall-e/assets/levels/fr/: 10000
wall-e/spacy/: Pipfile  server.py  util.py
wall-e/src/: AssetAsSet.hs  Common.hs  DontTranslate.hs  Foo.hs  LevelSet.hs  Lib.hs  Logger.hs  RawSubParser.hs  RichSubCtx.hs  SentenceStructParser.hs  Serializer.hs  Spacy.hs  SpacyParser.hs  Type.hs  scheme.hs
wall-e/src/Composer/: RawSubCtx.hs  RichSubCtx.hs
wall-e/src/Config/: App.hs
wall-e/src/DB/: WordReference.hs
wall-e/src/Deserializer/: WordReference.hs  Yandex.hs
wall-e/src/Redis/: Channel.hs  Connection.hs  Handler.hs  PubSub.hs
wall-e/src/Spacy/: Constants.hs  Parser.hs  Spacify.hs
wall-e/src/Translator/: Offline.hs  Translate.hs
wall-e/src/Translator/Strategy/: WordReference.hs  Yandex.hs
wall-e/test/: RawSubParserSpec.hs  RichSubCtxSpec.hs  SentenceStructParserSpec.hs  SpacyParserSpec.hs
wall-e/test/Composer/: RichSubCtxSpec.hs
wall-e/test/Deserializer/: WordReferenceSpec.hs  YandexSpec.hs
wall-e/test/Spacy/: ParserSpec.hs
wall-e/test/Translator/Strategy/: YandexSpec.hs
wall-e/test/assets/: amelie.srt  friends.srt  game of thrones2.srt  house.srt  sherlock.srt  theOffice.srt
wall-e/test/response/: wr.absorb.json  wr.goat.json  wr.is.json  wr.snort.json  wr.stage.json  wr.tell.json  wr.whispering.json  wr.world.json  yandex.stirring.json
