name:                subtitre
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/subtitre#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , RawSubParser
                     , RichSubCtx
                     , SentenceStructParser
                     , Dico
                     , Type
                     , Composer
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , mtl
                     , parsec
                     , pretty-simple
                     , text
                     , hspec
                     , process
                     , transformers >= 0.5.2.0
  default-language:    Haskell2010

executable subtitre-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , parsec
                     , pretty-simple
                     , subtitre
                     , transformers >= 0.5.2.0
                     , text
  default-language:    Haskell2010

test-suite subtitre-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , parsec
                     , text
                     , subtitre
  other-modules:       SentenceStructParserSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/subtitre
