name:                subtitre
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/subtitre#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , test/TestUtil.hs
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Composer.RawSubCtx
                     , Composer.RichSubCtx
                     , Config.App
                     , Deserializer.WordReference
                     , Deserializer.Yandex
                     , LevelSet
                     , RawSubParser
                     , RichSubCtx
                     , SentenceStructParser
                     , Serializer
                     , Translator.Strategy.Yandex
                     , Translator.Strategy.WordReference
                     , Translator.Offline
                     , Translator.Translate
                     , Type
  build-depends:       aeson
                     , async
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , containers >= 0.5.7.1
                     , deepseq
                     , hspec
                     , http-client >= 0.5.6.1
                     , http-types >= 0.9.1
                     , lens >= 4.15.1
                     , lens-aeson >= 1.0.0.5
                     , mtl
                     , parsec
                     , pretty-simple
                     , process
                     , tagsoup
                     , text
                     , time >= 1.6.0.1
                     , transformers >= 0.5.2.0
                     , unordered-containers >= 0.2.7.2
                     , wreq
                     , yaml
  default-language:    Haskell2010

executable subtitre-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , bytestring >= 0.10.8.1
                     , mtl
                     , parsec
                     , pretty-simple
                     , subtitre
                     , text
                     , transformers >= 0.5.2.0
                     , unordered-containers >= 0.2.7.2
  default-language:    Haskell2010

test-suite subtitre-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , bytestring >= 0.10.8.1
                     , hspec
                     , http-client >= 0.5.6.1
                     , http-types >= 0.9.1
                     , mtl
                     , parsec
                     , subtitre
                     , text
                     , transformers >= 0.5.2.0
                     , unordered-containers >= 0.2.7.2
                     , wreq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/subtitre
